--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,48 @@
-# IntelliJ files
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# Emacs backup files #
+*.*~
+
+# IntelliJ files *
 .idea/
+*.iml
+
+# build results
+out/
+build/
+
+# generated source files
+src/generated/
+.swagger-codegen/
+src/test/java/bio/terra/datarepo/
+
+# gradle files
+.gradle/
+.gradletasknamecache
+
+# Mac directory metadata
+.DS_Store
+
+*.pem
