--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,9 @@ dependencies {
     compile 'ch.qos.logback:logback-classic:1.2.3'       // Logger
     compile 'org.slf4j:slf4j-api:1.7.30'                 // Logging facade
 
+    compile 'info.picocli:picocli:4.2.0'
+    annotationProcessor 'info.picocli:picocli-codegen:4.2.0'
+
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: "${jackson}"
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "${jackson}"
 
@@ -172,7 +175,7 @@ sourceSets {
         effort = "max"
     }
 }
-mainClassName = 'jadesearchpoc.Main'
+mainClassName = 'jadesearchpoc.command.Main'
 
 jar {
     from sourceSets.generated.output
