--- a/build.gradle
+++ b/build.gradle
@@ -51,9 +51,9 @@ configurations {
 }
 
 // Exclude the Spring logger, so everything will use SLF4J
-configurations.all {
-    exclude group: "commons-logging", module: "commons-logging"
-}
+//configurations.all {
+//    exclude group: "commons-logging", module: "commons-logging"
+//}
 
 dependencies {
     ext {
@@ -79,11 +79,14 @@ dependencies {
     generatedCompile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "${jackson}"
 
     compile "org.apache.commons:commons-lang3:${commonsLang3}"
-    compile 'ch.qos.logback:logback-classic:1.2.3'       // Logger
-    compile 'org.slf4j:slf4j-api:1.7.30'                 // Logging facade
+//    compile 'ch.qos.logback:logback-classic:1.2.3'       // Logger
+//    compile 'org.slf4j:slf4j-api:1.7.30'                 // Logging facade
 
     compile 'info.picocli:picocli:4.2.0'
     annotationProcessor 'info.picocli:picocli-codegen:4.2.0'
+    compile 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.6.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.0'
 
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: "${jackson}"
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "${jackson}"
