--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven {
+        url 'https://broadinstitute.jfrog.io/broadinstitute/libs-release-local/'
+    }
 }
 
 configurations {
@@ -88,6 +91,7 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.0'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.0'
     compile 'com.google.cloud:google-cloud-bigquery:1.106.0'
+    compile 'org.broadinstitute.dsde.workbench:sam-client_2.12:0.1-9435410-SNAP'
 
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: "${jackson}"
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "${jackson}"
